<resources>
    <string name="app_name">ClientTaxiApp</string>
    <string name="Mic">Michael</string>
    <string name="Name" />
    <string name="Mail">Mail</string>
    <string name="name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Destination">Destination</string>
    <string name="ID">ID</string>
    <string name="Send">GetTaxi</string>
    <string name="Presentation">Present Yourself :</string>
    <string name="destination">What is your destination ?</string>
    <string name="Welcome">Welcome !</string>
    <string name="enter">Get a taxi</string>
</resources>
