<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Controller.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_app_hdpi">


        <ScrollView
            style="@android:style/Widget.Holo.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Presentation"
                        android:textSize="18sp"
                        app:fontFamily="cursive" />

                    <ScrollView
                        style="@android:style/Widget.Material.Light.ScrollView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/ID"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/ID"
                                    android:inputType="number" />

                            </android.support.design.widget.TextInputLayout>


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/Name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/name"
                                    android:inputType="textPersonName" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/Tel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Phone"
                                    android:inputType="number" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/Mail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/Mail"
                                    android:inputType="textEmailAddress" />

                            </android.support.design.widget.TextInputLayout>


                        </LinearLayout>


                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewDestination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destination" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Dest"
                            android:layout_width="202dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/Destination"
                            android:inputType="textPostalAddress" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/Send"
                    android:layout_width="150dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/Send"
                    android:textColor="@color/Blue" />


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</ScrollView>